# dirty-comments-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/api/: init.rs  mod.rs  remove.rs  retrieve.rs
src/api/db/: comment_db.rs  mod.rs  storage.rs
src/core/: mod.rs  parser.rs  tags.rs  utils.rs
src/core/components/: comment_stamped.rs  component_trait.rs  ided_comment.rs  marker.rs  mod.rs  unided_comment.rs
src/core/types/: comment.rs  mod.rs
test_proj/: file1.py
