[package]
name = "dirty-comments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.0.15", features = ["derive"] }
regex = "1.6.0"
rocksdb = "0.19.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_bytes = "0.11.7"
sha1 = "0.10.5"
uuid = { version = "1.2.1", features = ["v4", "v7", "serde"] }
walkdir = "2"
zstd = "0.11.2"
